# uzzalpro-Raw-FedAvg-Simulation---Federated-Learning

./: README.md
client-1/: client_1_app.py  pyproject.toml
client-2/: client_2_app.py  pyproject.toml
server/: pyproject.toml  server_app.py
